<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="case3" translatable="false">18.6 – 25</string>
    <string name="case4" translatable="false">25.1 – 30</string>
    <string name="case5" translatable="false">30.1 – 35</string>
    <string name="case6" translatable="false">35.1 – 40</string>
    <string name="case7" translatable="false">40+</string>
    <string name="button0" translatable="false">0</string>
    <string name="button1" translatable="false">1</string>
    <string name="button2" translatable="false">2</string>
    <string name="button3" translatable="false">3</string>
    <string name="button4" translatable="false">4</string>
    <string name="button5" translatable="false">5</string>
    <string name="button6" translatable="false">6</string>
    <string name="button7" translatable="false">7</string>
    <string name="button8" translatable="false">8</string>
    <string name="button9" translatable="false">9</string>
    <string name="buttonAdd" translatable="false">+</string>
    <string name="about_desc">Health calculator is presented for your own personal use and is to be used as a guide only. Medical and other decisions should not be based on the results of this calculator. Although this calculator has been tested, we cannot guarantee the accuracy of its calculations or results.</string>
    <string name="acceptable">Acceptable</string>
    <string name="action_important">Rate</string>
    <string name="age">Age :</string>
    <string name="alcohol_chart">Blood Alcohol Chart</string>
    <string name="alcohollevel">Drink\'s Alcohol Level:</string>
    <string name="apr">April</string>
    <string name="assessment">Assessment:</string>
    <string name="aug">August</string>
    <string name="avg_cal">Average Calories</string>
    <string name="bac_header">The most accurate way to measure your Blood Alcohol Concentration (BAC) or alcohol level is to use a breathalyzer, but sometimes one is not readily available. In cases like this, use the charts below to plan for how many drinks you should limit yourself to.\n\nMultiply your weight in kg by 2.2 to get your weight in lbs using the calculator above.</string>
    <string name="back_text">Back</string>
    <string name="beats">beats/minute</string>
    <string name="blddondesc">You should be in good health and atleast 17 years old with a body weight of 50 kg or 110 pounds.</string>
    <string name="blood_don_desc">Calculate your next eligible donation date</string>
    <string name="blood_donate">Blood Donation</string>
    <string name="bloodalcohol">Blood Alcohol</string>
    <string name="bloodalcohol_desc">Level of alcohol content in blood</string>
    <string name="bloodvol">Blood Volume</string>
    <string name="bloodvol_desc">Volume of blood of any individual</string>
    <string name="bloodvol_header">This additional guideline has been introduced to minimise the risk of feeling unwell or faint after giving blood.</string>
    <string name="bmi_chart">To find your BMI, locate where your height and weight intersect; your BMI is listed in the square</string>
    <string name="bmi_desc">Shows whether people have the right weight for their height</string>
    <string name="bmi_title">Body Mass Index</string>
    <string name="bmiis">Your Body Mass Index is</string>
    <string name="bodyfat">Body Fat</string>
    <string name="bodyfat_desc">A measure of fitness level of an individual</string>
    <string name="buttonClear">Clear</string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonDivide">/</string>
    <string name="buttonEquals">=</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonSubtract">-</string>
    <string name="calc">Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="calorie_chart_header">Estimated Calorie Needs per Day, by Age, Sex, and Physical Activity Level</string>
    <string name="calorie_desc">Calculate your daily calorie requirements for weight gain/loss</string>
    <string name="calories">Calories for weight gain/loss</string>
    <string name="caloriesval">calories</string>
    <string name="cancel_text">Cancel</string>
    <string name="canidonate">Can I Donate?</string>
    <string name="canigiveblood_desc">‣ Male donors could be eligible to give blood at a maximum frequency of every 12 weeks (4 times per year) but normally less often.\n\n‣ Female donors could be eligible to give blood at a maximum frequency of every 16 weeks (3 times per year) but normally less often.\n\n‣ Women between the ages of 17 and 19 who weigh less than 10 stone 3lbs (65kg) and whose height is below 5 feet 6 inches (168cm) need to have their blood volume estimated before giving blood. Please see the chart below. If your blood volume is within the shaded area you will be unable to donate until after your 20th birthday.</string>
    <string name="category">Category</string>
    <string name="centimeters">Centimeters</string>
    <string name="chart">BMI chart</string>
    <string name="chart_calorie">Daily Calorie Chart</string>
    <string name="chart_giving_blood">Blood Volume Chart</string>
    <string name="chart_ovulation">Menstrual Cycle Calendar</string>
    <string name="chart_water">Daily Water Intake Chart</string>
    <string name="choosedate">Choose Date</string>
    <string name="cm">cm</string>
    <string name="connection_problem">Connection Problem!</string>
    <string name="cup">cup</string>
    <string name="dailywaterreq">Your daily water requirement is</string>
    <string name="datechoosen">Date Chosen :</string>
    <string name="day">Day</string>
    <string name="dec">December</string>
    <string name="dwrdesc">Take 2 – 3 glasses of water additionally if you exercise or if your environmental conditions are hot.</string>
    <string name="edddesc">The due date calculation is based on the average 28-day cycle.</string>
    <string name="edddesc2">This calculation is based on the average 28-day cycle.</string>
    <string name="eligibility_check">Eligibility to donate</string>
    <string name="enterblddon">Choose the date of last donation</string>
    <string name="entercm">You must be over 153 cm to calculate ideal weight</string>
    <string name="enterfeet">You must be over 5 feet to calculate ideal weight</string>
    <string name="enterpregdate">Choose the 1st day of your last menstrual period</string>
    <string name="essential">Essential % of fat</string>
    <string name="extremely_active">Very Hard</string>
    <string name="exunder">Extremely under weight</string>
    <string name="fat_chart">Body Fat Chart</string>
    <string name="fat_header">As you can see below, you have the body fat percentage chart for women and now men (below) that you need to input the numbers from your measurements using calipers.</string>
    <string name="feb">February</string>
    <string name="glasses">Glasses</string>
    <string name="healthy_weight_desc">Keep up the good work! For tips on maintaining a healthy weight, check out the food and diet and fitness sections.</string>
    <string name="healthy_weight_header">Healthy weight</string>
    <string name="hypen" translatable="false">-</string>
    <string name="may_not_give">You may not give blood if:</string>
    <string name="may_not_give_desc">‣ You have had a serious illness or major surgery in the past or are currently on medication. The reason you are taking medication may prevent you from giving blood.\n\n‣ You have had complicated dental work. Simple fillings as OK after 24 hours; simple extractions are OK after 7 days.\n\n‣ You have been in contact with an infectious disease or have been given certain immunisation in the last 4 weeks.\n\n‣ You are presently on a hospital waiting list or undergoing medical tests.\n\n‣ You have got or had any heart conditions.\n\n‣ You do not weigh over 7stone 12lbs (50kgs). Please note, if you are female and aged between 17 and 19 years, weigh less than 10stone 3lbs (65kgs) and are less than 5’6” (168cm) in height, we need to confirm your estimated blood volume is over 3500ml.</string>
    <string name="obese_desc">The best way to lose weight if you\'re obese is through a combination of diet and exercise, and, in some cases, medicines. See a doctor for help and advice.</string>
    <string name="obese_header">Obese</string>
    <string name="overweight_desc">The best way to lose weight if you\'re overweight is through a combination of diet and exercise. The BMI calculator will give you a personal calorie allowance to help you achieve a healthy weight safely.</string>
    <string name="overweight_header">Overweight</string>
    <string name="percent">%</string>
    <string name="pregnancy_desc2">‣ You should not give blood if you are pregnant or you are a woman who has had a baby in the last 6 months.\n\n‣ You can donate if you are breast feeding.\n\n‣ If you have had a miscarriage or termination before 12 weeks it may be possible for you to donate.</string>
    <string name="pregnancy_header">Pregnancy</string>
    <string name="should_never_give">You should never give blood if:</string>
    <string name="should_never_give_12">You should not give blood for 12 months after sex with:</string>
    <string name="should_never_give__desc">‣ A man who has sex with another man (if you’re a female).\n\n‣ A commercial sex worker.\n\n‣ Anyone who has ever injected themselves with drugs.\n\n‣ Anyone with haemophilia or a related blood clotting disorder who has received clotting factor concentrates.\n\n‣ Anyone of any race, who has been sexually active in parts of the world where AIDS/HIV is very common. This includes countries in Africa.</string>
    <string name="should_never_give_desc">‣ You have ever had syphilis, HTLV (Human T Cell lymphotropic Virus), HIV or Hepatitis C.\n\n‣ You are a man who has had anal or oral sex with another man with or without a condom.\n\n‣ You’ve ever worked as a commercial sex worker.\n\n‣ You’ve ever injected yourself with drugs – even once.</string>
    <string name="should_not_donate">You should not give blood if:</string>
    <string name="should_not_donate_desc">‣ You are a male donor with less than 12 weeks interval between donations.\n\n‣ You are a female donor with less than 16 weeks interval between donations.\n\n‣ You have a sore throat, chesty cough or active cold sore. You can donate once you are feeling well (end of a cold is OK) and the cold sore is dry and healing.\n\n‣ You are currently taking antibiotics or you have just finished a course within the last 7 days or have had an infection in the last 2 weeks.\n\n‣ You have had hepatitis or jaundice in the last 12 months.\n\n‣ You have had a tattoo, semi-permanent make up or any cosmetic treatments that involves skin piercing in the last 12 months.\n\n‣ You have had acupuncture in the last 12 months, unless this was done within the NHS or by a qualified Healthcare Professional registered with a statutory body.\n\n‣ A member of your family (parent, brother, sister or child) has suffered with CJD (Creutzfeld-Jakob Disease).\n\n‣ You have ever received human pituitary extract (which was used in some growth hormone or fertility treatments before 1985)\n\n‣ You have received blood or think you may have received blood during the course of any medical treatment or procedure anywhere in the world since 1 January 1980.</string>
    <string name="underweight_desc">Being underweight could be a sign you\'re not eating enough or you may be ill. If you\'re underweight, a doctor can help.</string>
    <string name="underweight_header">Underweight</string>
    <string name="urbloodalcohol">Your Blood Alcohol Content is</string>
    <string name="uredd">Your expected delivery date is</string>
    <string name="urfer">Your upcoming most fertile days are</string>
    <string name="_200">200</string>
    <string name="_2000">2000</string>
    <string name="todo" translatable="false">TODO</string>
</resources>