<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/bg"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivRotate"
            android:layout_width="@dimen/res_img_size"
            android:layout_height="@dimen/res_img_size"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ovulation" />

        <TextView
            android:id="@+id/tvEdd"
            style="@style/AppTheme.fontstylesRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/urfer"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/font_size_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEddVal"
                style="@style/AppTheme.fontstylesBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/_200"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/font_size_30" />

            <TextView
                android:id="@+id/tvEddVal3"
                style="@style/AppTheme.fontstylesBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/hypen"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/font_size_30" />

            <TextView
                android:id="@+id/tvEddVal2"
                style="@style/AppTheme.fontstylesBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/_200"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/font_size_30" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvEddDesc"
                style="@style/AppTheme.fontstylesRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittextstyle"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/edddesc2"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/font_size_15" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
