<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical">

<!--    <ImageView-->
<!--        android:id="@+id/ivRotate"-->
<!--        android:layout_width="72dp"-->
<!--        android:layout_height="72dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:contentDescription="@string/todo"-->
<!--        android:src="@drawable/waterintake" />-->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imgsplashicon"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        app:lottie_autoPlay="true"
        app:lottie_fileName="waterintake.json"
        app:lottie_loop="false" />

    <TextView
        android:id="@+id/tvDwi"
        style="@style/AppTheme.fontstylesRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/dailywaterreq"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/font_size_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDwiVal"
            style="@style/AppTheme.fontstylesBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/_200"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/font_size_30" />

        <TextView
            android:id="@+id/tvGlasses"
            style="@style/AppTheme.fontstylesRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:gravity="center"
            android:text="@string/glasses"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/font_size_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvDwiDesc"
            style="@style/AppTheme.fontstylesRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittextstyle"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/dwrdesc"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/font_size_15" />
    </LinearLayout>
</LinearLayout>
